# term_paper_zaberov_django_6

./: .env.simple  .gitignore  README.md  dump.rdb  pyproject.toml
account/: admin.py  authentication.py  forms.py  models.py  urls.py  views.py
account/management/commands/: account_commands.py
account/migrations/: 0001_initial.py
account/templates/account/: confirm_email.html  dashboard.html  edit.html  invalid_verify.html  password_change_done.html  password_change_form.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  profile_detail.html  register.html  register_done.html  user_confirm_delete.html  user_detail.html  user_form.html  user_list.html
account/templates/auth/: user_confirm_delete.html
account/templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_email.html
blog/: admin.py  models.py  services.py  urls.py  views.py
blog/templates/blog/: post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
clients/: admin.py  forms.py  models.py  services.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_alter_client_options_rename_name_client_first_name.py
clients/templates/clients/: base.html  (+5 more)
core/: celery.py  settings.py  urls.py
fixtures/: account_data.json  blog_data.json  clients_data.json  logs_data.json  mailings_data.json
logs/: admin.py  apps.py  models.py  urls.py  views.py
mailings/: admin.py  apps.py  forms.py  jobs.py  models.py  proba.json  services.py  tasks.py  urls.py  views.py
static/css/: bootstrap.css
(+21 files in other folders)
